--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+# Npm
+.npmrc
+.nvmrc
+
 # build output
 dist/
 
@@ -6,6 +10,7 @@ dist/
 
 # dependencies
 node_modules/
+package-lock.json
 
 # logs
 npm-debug.log*
