--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "portfolio",
   "type": "module",
-  "version": "0.0.1",
+  "version": "1.0.0",
   "scripts": {
     "dev": "astro dev",
     "start": "astro dev",
@@ -10,8 +10,14 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/check": "^0.9.3",
+    "@astrojs/solid-js": "^4.4.2",
+    "@fontsource-variable/fira-code": "^5.1.0",
     "astro": "^4.15.8",
-    "@astrojs/check": "^undefined",
-    "typescript": "^undefined"
+    "astro-icon": "^1.1.1",
+    "typescript": "^5.6.2"
+  },
+  "devDependencies": {
+    "solid-devtools": "^0.30.1"
   }
 }
