--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.9.3",
+    "@astrojs/netlify": "^5.5.4",
     "@astrojs/solid-js": "^4.4.2",
     "@fontsource-variable/fira-code": "^5.1.0",
     "astro": "^4.15.8",
