--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
   "dependencies": {
     "@astrojs/check": "^0.9.3",
     "@astrojs/netlify": "^5.5.4",
+    "@astrojs/partytown": "^2.1.2",
+    "@astrojs/sitemap": "^3.2.1",
     "@astrojs/solid-js": "^4.4.2",
     "@fontsource-variable/fira-code": "^5.1.0",
-    "astro": "^4.15.8",
+    "astro": "^4.16.0",
     "astro-icon": "^1.1.1",
     "typescript": "^5.6.2"
   },
