--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,6 +23,12 @@ jobs:
     timeout-minutes: 15
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
+    env:
+      PUBLIC_EMAIL: ${{ vars.PUBLIC_EMAIL }}
+      PUBLIC_GITHUB: ${{ vars.PUBLIC_GITHUB }}
+      PUBLIC_WHATSAPP: ${{ vars.PUBLIC_WHATSAPP }}
+      PUBLIC_LINKEDIN: ${{ vars.PUBLIC_LINKEDIN }}
+      PUBLIC_API_EMAILJS: ${{ vars.PUBLIC_API_EMAILJS }}
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
