--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,6 +23,7 @@ jobs:
     timeout-minutes: 15
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
+    environment: PUBLICS_ENVIRONMENTS
     env:
       PUBLIC_EMAIL: ${{ vars.PUBLIC_EMAIL }}
       PUBLIC_GITHUB: ${{ vars.PUBLIC_GITHUB }}
