--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,6 +30,9 @@ jobs:
       PUBLIC_WHATSAPP: ${{ vars.PUBLIC_WHATSAPP }}
       PUBLIC_LINKEDIN: ${{ vars.PUBLIC_LINKEDIN }}
       PUBLIC_API_EMAILJS: ${{ vars.PUBLIC_API_EMAILJS }}
+      PUBLIC_API_RECAPTCHA: ${{ vars.PUBLIC_API_RECAPTCHA }}
+      PUBLIC_RECAPTCHA_SITE_KEY: ${{ vars.PUBLIC_RECAPTCHA_SITE_KEY }}
+      PUBLIC_TAG_MANAGER_KEY: ${{ vars.PUBLIC_TAG_MANAGER_KEY }}
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
@@ -44,6 +47,9 @@ jobs:
          echo "PUBLIC_WHATSAPP: ${PUBLIC_WHATSAPP}"
          echo "PUBLIC_LINKEDIN: ${PUBLIC_LINKEDIN}"
          echo "PUBLIC_API_EMAILJS: ${PUBLIC_API_EMAILJS}"
+         echo "PUBLIC_API_RECAPTCHA: ${PUBLIC_API_RECAPTCHA}"
+         echo "PUBLIC_RECAPTCHA_SITE_KEY: ${PUBLIC_RECAPTCHA_SITE_KEY}" 
+         echo "PUBLIC_TAG_MANAGER_KEY: ${PUBLIC_TAG_MANAGER_KEY}"
 
       # Runs a setup node environment
       - name: Setup Node.js environment
