--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "start": "astro dev",
     "build": "astro check && astro build",
     "preview": "astro preview",
-    "astro": "astro"
+    "astro": "astro",
+    "lint": "eslint \"src/**/*.{ts,tsx,js,astro}\""
   },
   "dependencies": {
     "@astrojs/check": "^0.9.3",
@@ -35,7 +36,17 @@
     "typescript": "^5.6.2"
   },
   "devDependencies": {
-    "solid-devtools": "^0.30.1"
+    "@eslint/js": "^9.14.0",
+    "@types/eslint__js": "^8.42.3",
+    "@typescript-eslint/parser": "^8.13.0",
+    "eslint": "^9.14.0",
+    "eslint-plugin-astro": "^1.3.1",
+    "eslint-plugin-jsx-a11y": "^6.10.2",
+    "eslint-plugin-solid": "^0.14.3",
+    "prettier": "^3.3.3",
+    "prettier-plugin-astro": "^0.14.1",
+    "solid-devtools": "^0.30.1",
+    "typescript-eslint": "^8.13.0"
   },
   "engines": {
     "node": ">=20.0.0"
