--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "build": "astro check && astro build",
     "preview": "astro preview",
     "astro": "astro",
-    "lint": "eslint \"src/**/*.{ts,tsx,js,astro}\""
+    "lint": "eslint \"src/**/*.{ts,tsx,js,astro}\"",
+    "prettier": "npx prettier . --write\n"
   },
   "dependencies": {
     "@astrojs/check": "^0.9.3",
