--- a/package.json
+++ b/package.json
@@ -10,6 +10,13 @@
     "type": "git",
     "url": "https://github.com/AgustinCammarota/Portfolio"
   },
+  "keywords": [
+    "Portfolio",
+    "Agustin Cammarota",
+    "Software Architect",
+    "Astro JS",
+    "Solid JS"
+  ],
   "license": "MIT",
   "author": {
     "name": "Agustin Cammarota",
@@ -20,10 +27,11 @@
     "dev": "astro dev",
     "start": "astro dev",
     "build": "astro check && astro build",
-    "preview": "astro preview",
     "astro": "astro",
     "lint": "eslint \"src/**/*.{ts,tsx,js,astro}\"",
-    "prettier": "npx prettier . --write\n"
+    "prettier": "npx prettier . --write",
+    "prettier-check": "npx prettier . --check",
+    "prepare": "husky"
   },
   "dependencies": {
     "@astrojs/check": "^0.9.3",
@@ -44,6 +52,7 @@
     "eslint-plugin-astro": "^1.3.1",
     "eslint-plugin-jsx-a11y": "^6.10.2",
     "eslint-plugin-solid": "^0.14.3",
+    "husky": "^9.1.6",
     "prettier": "^3.3.3",
     "prettier-plugin-astro": "^0.14.1",
     "solid-devtools": "^0.30.1",
