--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -48,6 +48,50 @@ jobs:
       - name: Lint
         run: npm run lint
 
+  # This workflow contains a single job called "unit-test"
+  unit-test:
+    # Define a time-out flow
+    timeout-minutes: 15
+    # The type of runner that the job will run on
+    runs-on: ubuntu-latest
+
+    # Steps represent a sequence of tasks that will be executed as part of the job
+    steps:
+      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      # Runs a setup node environment
+      - name: Setup Node.js environment
+        uses: actions/setup-node@v4.0.3
+        with:
+          node-version: 20.11.1
+
+      # Get npm cache directory
+      - name: Get npm cache directory
+        id: npm-cache-dir
+        shell: bash
+        run: echo "dir=$(npm config get cache)" >> ${GITHUB_OUTPUT}
+
+      # 1) Install dependencies
+      - name: Install dependencies
+        run: npm i
+
+      # 2) Run unit test
+      - name: Run test
+        uses: nick-fields/retry@v3
+        with:
+          timeout_minutes: 10
+          max_attempts: 3
+          command: npm run coverage
+
+      # 3) Deploy artifact coverage
+      - name: Deploy artifact coverage
+        uses: actions/upload-artifact@v4
+        with:
+          name: coverage-report
+          path: coverage
+
   # This workflow contains a single job called "build"
   build:
     # Define a time-out flow
