--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,8 @@
+# Test
+coverage
+
 # Env
+.env
 .env.development
 .env.production
 
@@ -28,10 +32,6 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
-
-# environment variables
-.env
-.env.production
 
 # macOS-specific files
 .DS_Store
