--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "build": "astro check && astro build",
     "astro": "astro",
     "lint": "eslint \"src/**/*.{ts,tsx,js,astro}\"",
+    "test": "vitest",
+    "coverage": "vitest run --coverage",
     "prettier": "npx prettier . --write",
     "prettier-check": "npx prettier . --check",
     "prepare": "husky"
@@ -46,17 +48,23 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.14.0",
+    "@solidjs/testing-library": "^0.8.10",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/user-event": "^14.5.2",
     "@types/eslint__js": "^8.42.3",
     "@typescript-eslint/parser": "^8.13.0",
+    "@vitest/coverage-v8": "^2.1.4",
     "eslint": "^9.14.0",
     "eslint-plugin-astro": "^1.3.1",
     "eslint-plugin-jsx-a11y": "^6.10.2",
     "eslint-plugin-solid": "^0.14.3",
     "husky": "^9.1.6",
+    "jsdom": "^25.0.1",
     "prettier": "^3.3.3",
     "prettier-plugin-astro": "^0.14.1",
     "solid-devtools": "^0.30.1",
-    "typescript-eslint": "^8.13.0"
+    "typescript-eslint": "^8.13.0",
+    "vitest": "^2.1.4"
   },
   "engines": {
     "node": ">=20.0.0"
