feat(*): add unit test [POR-008]

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,6 @@
 {
   "extends": "astro/tsconfigs/strict",
+  "exclude": ["dist", "coverage", "**/*.test.ts", "**/*.test.tsx", "src/tests"],
   "compilerOptions": {
     "strict": true,
     "target": "ESNext",
