Feature/por08 add unit test (#11)
* feat(*): add unit test [POR-008]

* feat(*): add unit test [POR-008]

* feat(*): add unit test [POR-008]

---------

Co-authored-by: “Agustin <agustin.cammarotamuti.contractor@gdevtools.com>

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,6 @@
 {
   "extends": "astro/tsconfigs/strict",
+  "exclude": ["dist", "coverage", "**/*.test.ts", "**/*.test.tsx", "src/tests"],
   "compilerOptions": {
     "strict": true,
     "target": "ESNext",
@@ -9,7 +10,7 @@
     "esModuleInterop": true,
     "jsx": "preserve",
     "jsxImportSource": "solid-js",
-    "types": ["vite/client"],
+    "types": ["vite/client", "vitest/globals", "@testing-library/jest-dom"],
     "noEmit": true,
     "isolatedModules": true,
     "strictNullChecks": true,
