--- a/package.json
+++ b/package.json
@@ -30,6 +30,9 @@
     "astro": "astro",
     "lint": "eslint \"src/**/*.{ts,tsx,js,astro}\"",
     "test": "vitest",
+    "e2e": "npx playwright test",
+    "e2e-ui": "npx playwright test --ui",
+    "e2e-report": "npx playwright show-report",
     "coverage": "vitest run --coverage",
     "prettier": "npx prettier . --write",
     "prettier-check": "npx prettier . --check",
@@ -47,11 +50,14 @@
     "typescript": "^5.6.2"
   },
   "devDependencies": {
+    "@axe-core/playwright": "^4.10.1",
     "@eslint/js": "^9.14.0",
+    "@playwright/test": "^1.48.2",
     "@solidjs/testing-library": "^0.8.10",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/user-event": "^14.5.2",
     "@types/eslint__js": "^8.42.3",
+    "@types/node": "^22.9.0",
     "@typescript-eslint/parser": "^8.13.0",
     "@vitest/coverage-v8": "^2.1.4",
     "eslint": "^9.14.0",
